# learning_object_dynamics

./: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt~  README.md  TODO  package.xml
action/: LogPerception.action
data/: jointspace_position_db.txt  toolspace_position_db.txt
include/segbot_arm_perception/: segbot_arm_perception.h
launch/: logging.launch
src/: .push_trials.cpp.swp  .push_var.cpp.swp  log_perception_action.cpp  look_behavior.cpp  push_script.cpp  push_test.cpp  push_trials.cpp  push_var.cpp  vision_logging_server.cpp
